--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx ajv -d notifications.json -s notification-schema.json",
+    "prepare": "husky"
   },
   "author": "Codon Learning",
-  "license": "ISC",
   "devDependencies": {
     "ajv-cli": "^5.0.0",
     "husky": "^9.1.6"
